k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weblintheatre
  namespace: default
spec:
  selector:
    matchLabels:
      run: weblintheatre
  replicas: 1
  template:
    metadata:
      labels:
        run: weblintheatre
    spec:
      containers:
        - name: weblintheatre
          image: docker.k8s.sui.li/weblintheatre:latest
          ports:
            - containerPort: 8401
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: weblintheatre
  namespace: default
  labels:
    run: weblintheatre
spec:
  selector:
    run: weblintheatre
  ports:
  - name: http
    port: 8401
    protocol: TCP



---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: weblintheatre-ingress-b
  namespace: default
  annotations:
      haproxy.org/check: "true"
      haproxy.org/forwarded-for: "true"
      haproxy.org/ssl-redirect: "true"
      haproxy.org/load-balance: "roundrobin"
spec:
  tls:
  - hosts:
    - weblintheatre.sui.li
    secretName: devops/tls-sui-li
  rules:
  - host: weblintheatre.sui.li
    http:
      paths:
      - path: /
        backend:
          serviceName: weblintheatre
          servicePort: 8401
