k8s_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weblintheatre-ingress-b
  namespace: suat
  annotations:
    haproxy.org/check: "true"
    haproxy.org/forwarded-for: "true"
    haproxy.org/ssl-redirect: "true"
    haproxy.org/load-balance: "roundrobin"
spec:
  tls:
  - hosts:
    - weblintheatre.sui.li
    secretName: tls-sui-li
  rules:
  - host: weblintheatre.sui.li
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: weblintheatre
            port:
              number: 8401
